--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Sidhant Bahl's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,46 +10,46 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li class="name">Sidhant Bahl</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/sid.jpeg" alt="Image of Sidhant " class="profile-image">
+      <h1 class="tag name">Hello, I’m Sidhant.</h1>
+      <p class="tag location">My home is New Delhi, India.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m an aspiring full stack engineer who loves everything about the internet.I am a motivated, creative and solution oriented student who is passionate about sharing stories and bringing together communities through digital design. My goal is to use my education in Computer Engineering and Business Management Economics to explore the intersection of technology, design and business in order to ensure a better tomorrow.</p>
+        <p>I love travelling to new places, enjoying life. I like to set my goals in my life and try to achieve them within a given time frame.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to help bring people and technologies through new websites. I want to keep on learning new things in life.:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Angular</li>
+          <li>Java</li>
+          <li>C</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work as a full stack engineer in the near future.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/sidhant-bahl-aa6619189/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/sidhantbahl" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2021, Sidhant</p>
     </footer>
   </body>
   </html>
