--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to help bring people and technologies through new websites. I want to keep on learning new things in life.:</p>
+        <p>I want to help bring people and technologies through new websites. I want to keep on learning new things in life. I want to open a startup in the near future:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
